# tollama-eval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  create_real_data_csv.py  pyproject.toml  real_data.csv  requirements-lock.txt  run_local_hf_e2e_tmp.py
.github/workflows/: ci.yml  release.yml
deploy/: docker-compose.yml  prometheus.yml
deploy/helm/tollama-eval/: Chart.yaml  values.yaml
deploy/helm/tollama-eval/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
docs/: output-interpretation.md  recipes.md  tollama-setup.md  troubleshooting.md
docs/adr/: 0001-frozen-results-schema.md  0002-runner-abstraction.md  0003-optional-dependency-strategy.md  0004-api-authentication-model.md  0005-job-persistence.md  template.md
examples/: create_real_data_csv.py  generate_sample.py  run_e2e.py  sample.csv
src/ts_autopilot/: __init__.py  __main__.py  audit.py  cache.py  cli.py  config.py  contracts.py  cost_tracking.py  encryption.py  events.py  exceptions.py  lineage.py  logging_config.py  pipeline.py  sdk.py  tracing.py
src/ts_autopilot/anomaly/: detector.py
src/ts_autopilot/automl/: selector.py  tuning.py
src/ts_autopilot/distributed/: __init__.py  ray_runner.py
src/ts_autopilot/evaluation/: cross_validation.py  diagnostics.py  ensemble.py  metrics.py  significance.py  speed_benchmark.py  stability.py
src/ts_autopilot/hierarchy/: reconciliation.py
src/ts_autopilot/ingestion/: loader.py  profiler.py
src/ts_autopilot/notifications/: __init__.py  slack.py  teams.py
src/ts_autopilot/reporting/: dashboard.py  executive_summary.py  explainability.py  export.py  html_report.py  pdf_export.py  view_data.py  xai_integration.py
src/ts_autopilot/reporting/templates/: report.html.j2
src/ts_autopilot/runners/: base.py  optional.py  statistical.py  tollama.py
src/ts_autopilot/server/: __init__.py  app.py  auth.py  job_store.py  metrics.py  retention.py  schemas.py  tenancy.py  webhooks.py  worker.py
src/ts_autopilot/tollama/: __init__.py  client.py
tests/: artifact_test_utils.py  conftest.py  test_anomaly_detection.py  test_audit.py  test_automl_selector.py  test_cache.py  test_cli.py  test_cli_flags.py  test_config.py  test_contracts.py  test_cv.py  test_dashboard.py  test_diagnostics.py  test_distributed.py  test_doctor.py  test_ensemble.py  test_ensemble_construction.py  test_events.py  test_exceptions.py  test_executive_summary.py  test_exogenous.py  test_export.py  test_extended_models.py  test_isolate_nhits.py  test_job_store.py  test_loader.py  test_loader_fuzz.py  test_merge_config.py  test_metrics.py  test_nf.py  test_nf_delayed.py  test_nf_loop.py  test_observability.py  test_optional_runners.py  test_pdf_export.py  test_pipeline.py  test_plugin_system.py  test_probabilistic_metrics.py  test_profiler.py  test_properties.py  (+19 more)
