[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ts-autopilot"
version = "0.2.0"
description = "Automated time series benchmarking — drop in a CSV, get ranked model results"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ts-autopilot contributors"},
]
keywords = ["time-series", "forecasting", "benchmarking", "automl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "statsforecast>=1.7,<2",
    "typer>=0.9,<1",
    "jinja2>=3.1,<4",
    "httpx>=0.25,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/ychoi-atop/ts-autopilot"
Repository = "https://github.com/ychoi-atop/ts-autopilot"
Issues = "https://github.com/ychoi-atop/ts-autopilot/issues"
Changelog = "https://github.com/ychoi-atop/ts-autopilot/blob/main/CHANGELOG.md"

[project.scripts]
ts-autopilot = "ts_autopilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_autopilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ts_autopilot"]
omit = [
    "src/ts_autopilot/__main__.py",
    "src/ts_autopilot/reporting/dashboard.py",
    "src/ts_autopilot/runners/optional.py",
    "src/ts_autopilot/reporting/pdf_export.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/ts_autopilot/cli.py" = ["B008"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "hypothesis>=6.0",
    "pdoc>=14.0",
]
prophet = [
    "prophet>=1.1",
]
lightgbm = [
    "lightgbm>=4.0",
    "mlforecast>=0.10",
]
xgboost = [
    "xgboost>=2.0",
    "mlforecast>=0.10",
]
neural = [
    "neuralforecast>=1.6",
]
hierarchical = [
    "hierarchicalforecast>=0.4",
]
pdf = [
    "weasyprint>=60.0",
]
dashboard = [
    "streamlit>=1.28",
]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
distributed = [
    "ray[default]>=2.0",
]
all = [
    "ts-autopilot[prophet]",
    "ts-autopilot[lightgbm]",
    "ts-autopilot[xgboost]",
    "ts-autopilot[neural]",
    "ts-autopilot[hierarchical]",
    "ts-autopilot[pdf]",
    "ts-autopilot[dashboard]",
    "ts-autopilot[tracing]",
    "ts-autopilot[server]",
    "ts-autopilot[distributed]",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "hypothesis>=6.0",
    "pdoc>=14.0",
]
